--- a/sshws/https.service
+++ b/sshws/https.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=HTTP SSH Over Websocket Python HideSSH
+Description=HTTP SSH Over Websocket Python lucifer-tunnel.my.id
 Documentation=https://hidessh.com
 After=network.target nss-lookup.target
 
